added media queries

--- a/code/index.html
+++ b/code/index.html
@@ -16,10 +16,10 @@
           <p>NewsRoom</p>
         </a>
         
-      <div class="menu">
-        <a href="#">Videos</a>
-        <a href="#">Blog</a>
-      </div>
+        <div class="menu">
+          <a href="#">Videos</a>
+          <a href="#">Blog</a>
+        </div>
         <input typ="text" placeholder="Search">
       </nav>
     </header>
@@ -80,8 +80,8 @@
     </section>
     
     <footer>
-      About us
-      Contact
+      <a href="#">About us</a>
+      <a href="#">Contact</a>
     </footer>
   </body>
 </html>
