--- a/code/index.html
+++ b/code/index.html
@@ -19,13 +19,20 @@
   </head>
 <body>
 
-    <header class="navbar">
+<header>
     <div class="logo">
      <img src="logo.png" alt="logo">
     </div>
     <div class="Name">
     <h2>Poodle Variety</h2>  
-      </div>
+    </div>
+<nav>
+    <ul>
+      <li>About</li>
+      <li>Contact</li>
+      <li>Blabla</li>
+    </ul>
+</nav>
 </header>
 
 <main>
@@ -88,9 +95,31 @@
   <h5>According to source close to the band</h5>
 </div>
 
+<div class="news-box">
+  <img src="jakob-samuel.jpeg" alt="not a poodle">
+  <h4>Lead singer of The Poodles NOT a poodle</h4>
+  <h5>According to source close to the band</h5>
+</div>
+
 </section>
 
 </main>
+
+<footer>
+  <nav>
+    <ul>
+     <li>About</li>
+     <li>Contact</li>
+     <li>Blabla</li>
+   </ul>
+  </nav>
+  <div class="Name">
+    <h2>Poodle Variety</h2>  
+    </div>
+  <div class="logo">
+    <img src="logo.png" alt="logo">
+   </div>
+</footer>
 
   </body>
 </html>
