Added major change in the design

--- a/code/index.html
+++ b/code/index.html
@@ -40,7 +40,7 @@
       </div>
     </section>
 
-
+ <div class="breaker"></div>
   <!-- The other news  -->
   <section class="other-news">
    <article>
