--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>Tech News</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,100 +18,175 @@
 </head>
 
 <body>
-  <div class="container">
-    <header class="header">
-      <h1 class="header__heading">TN ❈</h1>
-      <nav class="navbar">
-        <ul class="navbar__list">
-          <li class="navbar__item">Tech</li>
-          <li class="navbar__item">Videos</li>
-          <li class="navbar__item">Events</li>
-          <li class="navbar__item">More</li>
-        </ul>
-        <div class="navbar-toggle">
-          <span class="hamburger"></span>
-          <span class="hamburger"></span>
-          <span class="hamburger"></span>
-        </div>
-      </nav>
-    </header>
-    <main class="main">
-      <section class="section">
-        <img src="./assets/images/saw.jpg" class="section__image" alt="Cut-off saw cutting metal with sparks">
-        <div class="section__text">
-          <h2 class="section__header">Singapore-based Sesto Robotics Targets International Expansion with $5.7M Raise
-          </h2>
-          <p class="section__paragraph">Singapore-based industrial robotics firm Sesto this week announced a $5.7
-            million raise, featuring TRIVE, WTI GmbH and SEEDS Capital.
+  <header class="header">
+    <h1 class="header__heading">TN <span class="block">❈</span></h1>
+    <nav class="navbar">
+      <ul class="navbar__list">
+        <li class="navbar__item">
+          <a href="#" class="navbar__link">Tech</a>
+        </li>
+        <li class="navbar__item">
+          <a href="#" class="navbar__link">Videos</a>
+        </li>
+        <li class="navbar__item">
+          <a href="#" class="navbar__link">Events</a>
+        </li>
+        <li class="navbar__item">
+          <a href="#" class="navbar__link navbar__link--last">More</a>
+        </li>
+      </ul>
+      <div class="navbar-toggle">
+        <span class="hamburger"></span>
+        <span class="hamburger"></span>
+        <span class="hamburger"></span>
+      </div>
+    </nav>
+  </header>
+  <main class="main">
+    <section class="section">
+      <img src="./assets/images/saw.jpg" class="section__image" alt="Cut-off saw cutting metal with sparks">
+      <div class="section__text">
+        <h2 class="section__header">Singapore-based Sesto Robotics Targets International Expansion with $5.7M Raise
+        </h2>
+        <p class="section__paragraph">Singapore-based industrial robotics firm Sesto this week announced a $5.7
+          million raise, featuring TRIVE, WTI GmbH and SEEDS Capital.
+        </p>
+      </div>
+    </section>
+    <div class="articles-grid">
+      <article class="article">
+        <img src="./assets/images/samsung-galaxy.jpg" class="article__image" alt="Samsung galaxy fold phone">
+        <div class="article__text">
+          <h3 class="article__header">The world in your pocket: How smartphones will get smarter in 2022</h3>
+          <p>Google, OnePlus, Asus and Motorola give us a taste of how our phones will be more useful, intelligent and
+            powerful over the next 12 months.
           </p>
         </div>
-      </section>
-      <div class="grid">
-        <article class="article">
-          <img src="./assets/images/samsung-galaxy.jpg" class="article__image" alt="Samsung galaxy fold phone">
-          <div class="article__text">
-            <h3 class="article__header">The world in your pocket: How smartphones will get smarter in 2022</h3>
-            <p>Google, OnePlus, Asus and Motorola give us a taste of how our phones will be more useful, intelligent and
-              powerful over the next 12 months.
-            </p>
-          </div>
-        </article>
-        <article class="article">
-          <img src="./assets/images/apps.jpg" class="article__image" alt="Phone with apps">
-          <div class="article__text">
-            <h3 class="article__header">Google and Meta fined $237M over user tracking in France</h3>
-            <p>France's data protection agency issued a 210 million euro ($237 million) fine to Google and Meta on
-              Thursday
-              over user tracking concerns.
-            </p>
-          </div>
-        </article>
-        <article class="article">
-          <img src="./assets/images/meta.jpg" class="article__image" alt="Facebook and Meta 3D icons">
-          <div class="article article__text">
-            <h3 class="article__header">The FTC is Reportedly Probing Meta's VR Business for Antitrust Violations</h3>
-            <p>Following news that the FTC's antitrust suit against Meta cleared a critical hurdle earlier this week,
-              the agency is apparently also taking a sharp interest in the company's VR business.
-            </p>
-          </div>
-        </article>
-        <article class="article">
-          <img src="./assets/images/innovation.jpg" class="article__image"
-            alt="Upside down light buld with plant in it on wood">
-          <div class="article__text">
-            <h3 class="article__header">The Most Innovative Tech we Reviewed in 2021</h3>
-            <p>2021 wasn't short of tech that took to creative paths to solve real-world problems. These are the
-              breakthrough gadgets that set the stage for years to come.
-            </p>
-          </div>
-        </article>
-        <article class="article">
-          <img src="./assets/images/cyber-security.jpg" class="article__image" alt="Lock and two credit cards on keyboard">
-          <div class="article__text">
-            <h3 class="article__header">Cybersecurity 2022: More Fraud, More Fakes, More Crypto Scams</h3>
-            <p>Cybercriminals in 2022 will move from identity theft to identity fraud, predicted the Identity Theft
-              Resource Center.
-            </p>
-          </div>
-        </article>
-        <article class="article">
-          <img src="./assets/images/books.jpg" class="article__image" alt="Stack of books and a journal">
-          <div class="article__text">
-            <h3 class="article__header">Lawtrades Aims to Change how your Company Utilizes Legal Resources</h3>
-            <p>Similar to other industries embracing contract work, Lawtrades is giving legal professionals a way to
-              become independent and run their own virtual law practices.
-            </p>
-          </div>
-        </article>
-      </div>
-    </main>
-  </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/meta.jpg" class="article__image" alt="Facebook and Meta 3D icons">
+        <div class="article__text">
+          <h3 class="article__header">The FTC is Reportedly Probing Meta's VR Business for Antitrust Violations</h3>
+          <p>Following news that the FTC's antitrust suit against Meta cleared a critical hurdle earlier this week,
+            the agency is apparently also taking a sharp interest in the company's VR business.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/benz.jpg" class="article__image" alt="Mercedes-Benz car grille">
+        <div class="article__text">
+          <h3 class="article__header">Mercedes-Benz Acquires Stake in Lidar maker Luminar</h3>
+          <p>Mercedes-Benz announced it will integrate Luminar's vehicles to enable autonomous driving capabilities.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/AI.jpg" class="article__image" alt="Robotic arm pointing at a wall">
+        <div class="article__text">
+          <h3 class="article__header">Bias in AI systems can result in significant losses to companies</h3>
+          <p>More than one in three companies revealed they had suffered losses due to AI bias in one or several
+            algorithms, noted the DataRobot survey of over 350 U.S. and U.K. technologists.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/cyber-security.jpg" class="article__image"
+          alt="Lock and two credit cards on keyboard">
+        <div class="article__text">
+          <h3 class="article__header">Cybersecurity 2022: More Fraud, More Fakes, More Crypto Scams</h3>
+          <p>Cybercriminals in 2022 will move from identity theft to identity fraud, predicted the Identity Theft
+            Resource Center.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/VR.jpg" class="article__image" alt="Woman standing outside with VR headset">
+        <div class="article__text">
+          <h3 class="article__header">Google is Building an AR Headset</h3>
+          <p>Project iris could see Google go up against Meta and Apple in the coming headset wars.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/books.jpg" class="article__image" alt="Stack of books and a journal">
+        <div class="article__text">
+          <h3 class="article__header">Lawtrades Aims to Change how your Company Utilizes Legal Resources</h3>
+          <p>Similar to other industries embracing contract work, Lawtrades is giving legal professionals a way to
+            become independent and run their own virtual law practices.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/apps.jpg" class="article__image" alt="Phone with apps">
+        <div class="article__text">
+          <h3 class="article__header">Google and Meta fined $237M over user tracking in France</h3>
+          <p>France's data protection agency issued a 210 million euro ($237 million) fine to Google and Meta on
+            Thursday
+            over user tracking concerns.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/twitter.jpg" class="article__image" alt="3D twitter logo">
+        <div class="article__text">
+          <h3 class="article__header">Twitter Communities now Work on Android</h3>
+          <p>Twitter is rolling out its communities feature, a rival to Facebooks Groups and Reddit, to Android
+            users worldwide.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/startup.jpg" class="article__image" alt="people working in an office">
+        <div class="article__text">
+          <h3 class="article__header">Freshworks Brings New Tech Stack To Power Startups</h3>
+          <p>Software company Freshworks on Nov. 11 debuted Freshstack, a customer relationship management suite of
+            products built
+            for the unique needs of startups. The new platform unifies customer support, sales, and marketing teams.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/bitcoin.jpg" class="article__image"
+          alt="bitcoin boin with computer screen in background">
+        <div class="article__text">
+          <h3 class="article__header">Crypto.com Admits Over $30 Million Stolen by hackers</h3>
+          <p>In a new blog post the company said that 4,836 ETH and 443 bitcoin were taken.
+          </p>
+        </div>
+      </article>
+      <article class="article">
+        <img src="./assets/images/innovation.jpg" class="article__image"
+          alt="Upside down light buld with plant in it on wood">
+        <div class="article__text">
+          <h3 class="article__header">The Most Innovative Tech we Reviewed in 2021</h3>
+          <p>2021 wasn't short of tech that took to creative paths to solve real-world problems. These are the
+            breakthrough gadgets that set the stage for years to come.
+          </p>
+        </div>
+      </article>
+    </div>
+  </main>
   <footer class="footer">
     <ul class="footer__list">
-      <li>About</li>
-      <li>Policies</li>
-      <li>Follow</li>
+      <li class="footer__link-header">About</li>
+      <li class="footer__link">TechNews</li>
+      <li class="footer__link">Contact Us</li>
+      <li class="footer__link">Advertise</li>
     </ul>
+
+    <ul class="footer__list">
+      <li class="footer__link-header">Policies</li>
+      <li class="footer__link">Privacy Policy</li>
+      <li class="footer__link">Terms of Use</li>
+      <li class="footer__link">Cookie Settings</li>
+    </ul>
+    <ul class="footer__list">
+      <li class="footer__link-header">Follow</li>
+      <li class="footer__link">Facebook</li>
+      <li class="footer__link">Youtube</li>
+      <li class="footer__link">Twitter</li>
+    </ul>
+
   </footer>
   <script src="./assets/javascript/index.js"></script>
 </body>
