changes in html and css to make responsive

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Lauras magazine</title>
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Scope+One&display=swap" rel="stylesheet">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
+    <!-- logo and navbar, still not responsive. Flex-->
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="header">
+        <div class="nav">
+        <img src="./images/logo.png" alt="Logotype">
+          <ul>
+          <li><a href="#">Start</a></li>
+          <li><a href="#">Articles</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Login</a></li>         
+                </ul>
+        </div>
+      </div>
+        
     </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
-
-    <section class="">
+    <!-- The big news content -->
+<section class="container"> 
+  <div class="cell-1"><img class="image"  src="./images/woman-small.jpg" alt="Woman looking straight at you"></div>
+  <div class="cell-2">
+    <h2>Latest trends in Paris this year post Corona</h2>
+    <p>This is a paragrah about some trends. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsum mollitia nobis
+       quisquam assumenda blanditiis temporibus tenetur, ducimus ut voluptates dolorum eos suscipit minus omnis ipsa, ullam praesentium,
+        minima nulla?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. In, hic culpa. A facilis, libero nemo similique aliquam deleniti. 
+     dignissimos deserunt et, nulla at consequatur similique repellendus praesentium iure ipsa.</p></div>
       <!-- The other news  -->
-    </section>
+  <div class="cell-3">
+    <p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+       Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
+  <div class="cell-4"><p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
+  <div class="cell-5"><p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
+  <div class="cell-6"><p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
+    <div class="cell-7"><p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
+      <div class="cell-8"><p>The very last of the boxes, number 8, that is. Im so proud of myself..</p></div>
+  </secion>
+    
   </body>
 </html>
