added more CSS and update information

--- a/code/index.html
+++ b/code/index.html
@@ -3,50 +3,70 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
+    <!--external CSS connection-->
     <link rel="stylesheet" href="./style.css" />
     <!-- meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-
+<!--menu-->
 <header>
-  <img class="item1" src="../img/logo.jpg" alt=""/>
+  <img class="item1" src="../img/logo.jpg" alt="logo"/>
   <div class="item2">Travel St. Martin</div>
-  <div class="item3"><a href="#home">Link1</a></div>
-  <div class="item4"><a href="#home">Link2</a></div>
-  <div class="item5"><a href="#home">Link3</a></div>
-  <div class="item6"><a href="#home">Link4</a></div>
+  <div class="item3"><a href="#home">Home</a></div>
+  <div class="item4"><a href="#hotel">List of Hotel</a></div>
+  <div class="item5"><a href="#blog">Blog</a></div>
+  <div class="item6"><a href="#contact">Contact</a></div>
 </header>
-
+<!--Main text upper part-->
     <section class="big-news">
-      <div>
-        <img src="../img/travel5.jpg" />
+      <div class="polaroid">
+        <img src="../img/travel5.jpg" alt="coconut tree"/>
+        <p>Coconut tree</p>
       </div>
       <div class="big-news-text">
+        <h1>Natural piece of paradise</h1>
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
+          The St. Martin island and the journey to and fro, 
+          both are extremely enjoyable be it with family or friends or couple. 
+          It takes a good 2 to 2.5 hrs drive from Cox bazaar to Teknaf from 
+          where one has to board ferry to reach the island. The boat ride itself is really 
+          enjoyable where you’ll be accompanied by seagulls through and through. 
+          The travellers throw tit-bits and bread pieces for which the gulls throng 
+          along the boat till great distances <a href="https://travelvibe.net/saint-martin-the-ultimate-travelers-guide/" target="_blank"><i>read more</i></a>
         </p>
       </div>
     </section>
-
+<!--Main text lower part-->
     <section class="mainText">
-      <!-- The other news  -->
       <div class="childOne">
-        <div>
-          <img src="../img/travel6.jpg" />
+        <div class="polaroid">
+          <img src="../img/coral island.jpg" alt="Coral island"/>
+          <p>Coral island</p>
         </div>
         <div>
+          <h1>Coral Island</h1>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
+            <br><a href="https://www.youtube.com/watch?v=_c8obDjKgxA" target="_blank"><b>Watch at a glance</b></a><br>
+            <br>St. Martin is a small island in the south eastern part of Bangladesh. 
+            This is the southern most point of Bangladesh. 
+            It is in the north east part of Bay of Bengal. 
+            This island is almost flat and is 3.6 meter above sea level and 
+            about 8 kilometer long. St. Martin is the only coral island in Bangladesh. 
+            Exotic view of the sea, simple life style of the natives, quiet, peaceful and 
+            full of enthusiasm made this island best tourist island of Bangladesh. 
+            
           </p>
         </div>
       </div>
 
       <div class="childTwo">
-        <div>
-          <img src="../img/travel5.jpg"/>
+        <div class="polaroid">
+          <img src="../img/fish.jpg" alt="fish fry"/>
+          <p>Fresh fish</p>
         </div>
         <div>
+          <h1>Local cuisine</h1>
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
           </p>
@@ -54,10 +74,12 @@
       </div>
 
       <div class="childOne">
-        <div>
-          <img src="../img/travel3.jpg"/>
+        <div class="polaroid">
+          <img src="../img/sunset.jpg" alt="Sunset"/>
+          <p>Senset</p>
         </div>
         <div>
+          <h1>Enjoy Sunset</h1>
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
           </p>
@@ -65,12 +87,15 @@
       </div>
 
       <div class="childOne">
-        <div>
-          <img src="../img/travel6.jpg"/>
+        <div class="polaroid">
+          <img src="../img/hotel.jpg" alt="hotel"/>
+          <p>Hotel & Resorts</p>
         </div>
         <div>
+          <h1>Where need to stay</h1>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
+            Thrive at our hotel offering free high-speed Wi-Fi, free on-site parking, a full-service spa, fitness center 
+            and pool at site. Most common hotel and resorts are <a href="https://www.tripadvisor.com/Hotels-g3396905-Saint_Martin_s_Island_Chittagong_Division-Hotels.html" target="_blank">here</a>
           </p>
         </div>
       </div>
