--- a/code/index.html
+++ b/code/index.html
@@ -17,8 +17,8 @@
         </a>
         
         <div class="menu">
-          <a href="#">Videos</a>
-          <a href="#">Blog</a>
+          <a href="#">VIDEOS</a>
+          <a href="#">BLOG</a>
         </div>
         <input typ="text" placeholder="Search">
       </nav>
@@ -75,7 +75,7 @@
       <a href="#">
         <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\francesco-la-corte-lICAVYUOBSw-unsplash.jpg"
         alt="hotel">
-        <h5>5 appealing hotels to add to your list</h5>
+        <h5>5 appealing hotels to add to visit</h5>
     </article>
     </section>
     
