--- a/code/index.html
+++ b/code/index.html
@@ -19,6 +19,7 @@
         <div class="menu">
           <a href="#">VIDEOS</a>
           <a href="#">BLOG</a>
+          <a href="#">ABOUT</a>
         </div>
         <input typ="text" placeholder="Search">
       </nav>
@@ -28,11 +29,15 @@
       <a href="#">
         <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\freddie-marriage-vSchPA-YA_A-unsplash.jpg"
         alt="home-office">
-        <h2>How to create the perfect home office</h2>
-        <p1>Just about anyone can benefit from having a functional workspace to tackle their to-do list, make headway on a creative project, 
+        <div class="big-news-text">
+          <p2>2022-01-21</p2>
+          <h2>How to create the perfect home office</h2>
+          <p1>Just about anyone can benefit from having a functional workspace to tackle their to-do list, make headway on a creative project, 
           or simply catch up on some reading. 
-          Luckily, when it comes to home office design schemes, the possibilities are endless.</p1>
-      </a>
+          Luckily, when it comes to home office design schemes, the possibilities are endless.
+          </p1>
+        </div>
+        </a>
     </section>
 
     <section class="smaller-news">
