header responsive updated

--- a/code/index.html
+++ b/code/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>The Book Magazine</title>
+    <link rel="stylesheet" href="style.css" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,6 @@
   </head>
   <body>
     <header class="header">
-      <!-- Some kind of logo and navbar -->
       <div class="branding">
         <span class="branding-logo"></span>
         <h1 class="branding-title">THE BOOK MAGAZINE</h1>
@@ -24,26 +23,16 @@
       <nav class="nav">
         <a class="nav-menu" href="#">HOME</a>
         <a class="nav-menu" href="#">NEWS</a>
-        <a class="nav-menu" href="#">STORIES</a>
-        <a class="nav-menu" href="#">CONTACT</a>
-      </nav>
-    </header>
-    <div class="header-tablet">
-      <!-- Some kind of logo and navbar -->
-      <nav class="nav-tablet">
-        <a class="nav-menu" href="#">HOME</a>
-        <a class="nav-menu" href="#">NEWS</a>
-        <div class="branding">
+        <div class="branding-tablet">
           <span class="branding-logo"></span>
           <h1 class="branding-title">THE BOOK MAGAZINE</h1>
         </div>
         <a class="nav-menu" href="#">STORIES</a>
         <a class="nav-menu" href="#">CONTACT</a>
       </nav>
-    </div>
+    </header>
 
     <section class="big-news">
-      <!-- The big news content -->
       <img
         class="big-news-img"
         src="./assets/article-main-sample.jpg"
