--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,64 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+
+    <!-- this is the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+
+    <!-- This is the font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     
-    <section class="">
+     <!-- This is the header -->
+    <header>
+      Ye Olde News
+     </header>
+
+   <!-- This is the logo and navbar -->
+     <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+
+      <!-- The big news content -->
+      <section class="big-news">
+        <h1>
+        big news
+      </section>
+      </h1>
+  
       <!-- The other news  -->
+      <section class="other-news">
+        <h2>
+        other news
+      </section>
+      </h2>
+
+      <!-- This is the flexbox -->
+    <div class="flex-container">
+      <div>
+        This is my first news story
+      </div>
+      <div>
+        This is my second news story
+      </div>
+      <div>
+        This is my third news story
+      </div>
+      <div>
+        <img src="newspic.jpg">
+      </div>
+    </div> 
+     
+      <!-- This is the footer -->
+    <footer>&copy;Marianne Ardin</footer>
+
     </section>
   </body>
 </html>
