--- a/code/news_site_2/index.html
+++ b/code/news_site_2/index.html
@@ -20,13 +20,15 @@
 
   <!-- Navbar -->
   <nav class="navbar">
-    <a href="../index.html" target="_blank" alt="News Site 1"><i class="fas fa-circle fa-2x brand-logo"></i></a>
-    <a href="../index.html" target="_blank" alt="News Site 1">
+    <a href="../index.html" target="_blank" alt="News Site 1" class="hidden-link"><i class="fas fa-circle fa-2x brand-logo"></i></a>
+    <a href="../index.html" target="_blank" alt="News Site 1" class="hidden-link">
       <h1><span class="brand-1">Unremarkable</span><span class="brand-2">News</span></h1>
     </a>
     <a href="" alt="" class="navbar-link-1">Nothing Noteworthy</a>
     <a href="" alt="" class="navbar-link-2">Daily Events</a>
+    <a href="../index.html" target="_blank" alt="News Site 1">
     <i class="fas fa-circle fa-2x hidden-logo"></i>
+    </a>
     <a href="" alt="" class="navbar-link-3">Mildly Interesting</a>
     <a href="" alt="" class="navbar-link-4">Actually Boring</a>
   </nav>
