Changed text to uppercase

--- a/code/index.html
+++ b/code/index.html
@@ -15,10 +15,10 @@
         <img src="images/elephant-15850.png" width="100px" alt="" class="logga">
         <div class="meny"><button><img src="images/bars-solid.svg" width="30px" alt=""></button>
             <ul>
-                <a href="#"><li>Popular</li></a>
-                <a href="#"><li>Latest news</li></a>
-                <a href="#"><li>Animals</li></a>
-                <a href="#"><li>Donations</li></a>
+                <a href="#"><li>POPULAR</li></a>
+                <a href="#"><li>LATEST NEWS</li></a>
+                <a href="#"><li>ANIMALS</li></a>
+                <a href="#"><li>DONATION</li></a>
             </ul></div>
         
         <nav>
