Added basic css styling to sections

--- a/code/index.html
+++ b/code/index.html
@@ -23,8 +23,7 @@
 
     <!-- The big-news content -->
     <section class="big-news">
-      <img class="headline-img" 
-           src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+      <img class="headline-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
       <div class="headline-content">
         <h1> Very. big. News.</h1>
         <p>Lot's and lot's of text about the very big news.</p>
@@ -34,24 +33,33 @@
     <!-- The other-news  -->
     <section class="other-news">
       <div class="article">
-        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
-        <h3>Article title.</h3>
-        <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <div class="article-text">
+          <h2>Article title.</h2>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        </div>
       </div>
       <div class="article">
-        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
-        <h3>Another article title.</h3>
-        <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <div class="article-text">
+          <h2>Article title.</h2>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        </div>
       </div>
       <div class="article">
-        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
-        <h3>Article title.</h3>
-        <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <div class="article-text">
+          <h2>Article title.</h2>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        </div>
       </div>
-            <div class="article">
-        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
-        <h3>Another article title.</h3>
-        <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+      <div class="article">
+        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <div class="article-text">
+          <h2>Article title.</h2>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        </div>
+      </div>
       </div>
     </section>
 
