--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <img src="images/elephant-15850.png" width="100px" alt="" class="logga">
-        <div class="meny"><button><img src="images/bars-solid.svg" width="30px" alt=""></button>
+        <div class="meny"><button><img src="images/bars-solid.svg" width="30px" alt="" tabindex="1"></button>
             <ul>
                 <a href="#"><li>POPULAR</li></a>
                 <a href="#"><li>LATEST NEWS</li></a>
@@ -32,7 +32,7 @@
     
     <section class="bigNews">
         <div class="part1">
-            <img src="images/animals.jpg" width=500px" alt="">
+            <img src="images/animals.jpg" width="500px" alt="">
         </div>
         <div class="part2">
             <h2>THE BIG ANIMAL FAMILY</h2>
